--- a/about_nhlakanipho.css
+++ b/about_nhlakanipho.css
@@ -61,7 +61,7 @@ header img {
     color: white;
     text-decoration: none;
     margin: 0 5px;
-    padding: 10px;
+    padding: 10px 0;
     font-weight: bold;
 }
 
@@ -336,7 +336,7 @@ h3 {
     background-color: var(--accent-color);
 }
 
-.pr-image, .total-projects-image, .skills-description img, .data_entry_image {
+.pr-image, .total-projects-image, .skills-description img{
     border-radius: 10px;
     margin: 15px;             
     width: 220px;
@@ -352,6 +352,17 @@ h3 {
 .work-description{
     gap: 10px;
 }
+
+.data_entry_image {
+    border-radius: 10px;
+    margin-left: 15px;
+    margin-right: 15px;  
+    margin-top: 27px;           
+    width: 220px;
+    height: 220px;
+    filter: brightness(1);  
+}
+
 .work-container {
     background-color: var(--accent-color);
     border-radius: 10px;
@@ -400,4 +411,39 @@ h3 {
     width: 225px;
     height: 225px;
     filter: brightness(1);   
+}
+
+/* Case Study Section */
+
+.case_study-container{
+    background-color: var(--accent-color);
+    border-radius: 10px;
+    padding-top: 4px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.case_study-container h2 {
+    padding-left: 5px;
+    padding-bottom: 30px;
+    margin: 0px;
+}
+
+
+
+.case_study-container p, .case_study-container ul, .case_study-container h3 {
+    text-align: left;
+}
+
+.case_study-container h3 {
+    padding-top: 0px;
+}
+
+.case_study-container ul {
+    font-size: 23px;
+}
+
+.case_study-container li, .work-container li {
+    padding: 5px;
 }
